# copier-ml

./: .gitignore  LICENSE.txt  copier.yml  poetry.toml  pyproject.toml  pytest.ini
includes/: README.md  license_blurb_hashes.jinja  license_blurb_html.jinja  license_blurb_ipynb.jinja
scripts/: README.md  constants.py  post_copy.py
template/: .env.example.sh.jinja  .gitignore  .gitignore.jinja  README.md.jinja  pyproject.toml.jinja  {% if license == 'lgpl30' %}LICENSE.txt{% endif %}.jinja  {% if license == 'mit' %}LICENSE.txt{% endif %}.jinja  {% if use_comet %}.env.example.sh{% endif %}.jinja
template/notebooks/experiments/: example_experiment.ipynb.jinja
template/notebooks/tutorials/: example_tutorial.ipynb.jinja
template/scripts/: check-pdm-lock.bash  check_pdm_lock.py  pdm_lockfile.py  pdm_lockfile.py.jinja  use-pdm-lock.bash  use_pdm_lock.py
template/{% if use_vscode %}.vscode{% endif %}/: settings.json
template/{{ module_name }}/: __init__.py.jinja  settings.py.jinja
template/{{ module_name }}/utils/: __init__.py.jinja  comet.py.jinja  download.py.jinja  download_test.py.jinja  extract.py.jinja  extract_test.py.jinja  project_paths.py.jinja  project_paths_test.py.jinja  {% if use_comet %}comet.py{% endif %}.jinja
tests/: README.md  test_copy.py  testing_utils.py
